--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>
                 <button style="position: relative;">
                 <font size="5" face="Times New Roman">
-                <a href="https://iigaxer.github.io/Profile/" target="_top" rel="noopener noreferrer" style="text-decoration:none">
+                <a href="https://iigaxer.github.io/BETA/" target="_top" rel="noopener noreferrer" style="text-decoration:none">
                     About
                 </button>
                 </a>
